<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trivial</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="Titulo_play">PLAY GAME</string>
    <string name="score">Score: </string>
    <string name="time">Time: </string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_score">Score :</string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_settings">Settings</string>
    <string name="usname">Nombre de usuario:</string>
    <string name="email">Email:</string>
    <string name="preferencia">Tipo de Preguntas:</string>
    <string name="servidor">Servidor:</string>
    <string name="amigoemail">Enviar a un amigo:</string>
    <string name="selPrefer">Seleccione un tema</string>
    <string name="add">Añadir</string>
    <string name="comodin">Comodin de la llamada</string>
    <string name="algo"></string>

</resources>
